add task node exec table.